--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+.app {
+  background-image: url('./assets/background/BG.JPG');
+  background-repeat: repeat;
+}
+
+.flex-container {
+display: flex;
+align-items: top;
+align-content: center;
+flex-flow: row wrap;
+justify-content: center;
+padding: 0;
+margin: 0;
+background-image: url('./assets/background/BG.JPG');
+background-repeat: repeat;
+width: 100%;
+}
+.dropdown {
+  visibility: visible;
+  right: 40px;
+}
+.flex-item {
+  padding: 5px;
+  width: 85%;
+  height: auto;
+  max-height: 90%;
+  margin: 25px;
+  margin-top: 20px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+.storyboard-icon {
+  width: 95%;
+  height: 50%;
+  color: rebeccapurple;
+}
+.nav{
+  display: none;
+}
+.mr-auto {
+  display: none;
+}
+a.nav-link {
+  display: none;
+}
+
+.carousel {
+  padding: 5px;
+  width: 85%;
+  height: auto;
+  max-height: 90%;
+  margin: 25px;
+  margin-top: 20px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}*
+.carousel-container {
+  padding: 35px;
+  width: 85%;
+  height: auto;
+  max-height: 90%;
+  margin: 25px;
+  margin-top: 20px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+@media all and (min-width: 900px) {
+.main-nav {
+  list-style-type: none;
+  display: none;
+}
+a.nav-link {
+  display: block;
+}
+.mr-auto {
+  visibility: visible;
+}
+.dropdown {
+  visibility: collapse;
+}
+.flex-item {
+  padding: 5px;
+  width: 85%;
+  max-width: 500px;
+  height: auto;
+  max-height: 500px;
+  margin: 25px;
+  margin-top: 20px;
+  line-height: 150px;
+  font-weight: bold;
+  font-size: 3em;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*wivelit872@emailnube.com*/
