--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,34 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.dropdown {
+  visibility: visible;
+  right: 40px;
+}
+.app {
+  background-image: url('./assets/background/BG.JPG');
+  background-repeat: repeat;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
 }
 
 .flex-container {
+  display: flex;
+  align-items: top;
+  align-content: center;
+  background-color: red;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.media-container {
   display: flex;
   align-items: top;
   align-content: center;
@@ -10,17 +36,12 @@
   justify-content: center;
   padding: 0;
   margin: 0;
-  background-image: url('./assets/background/BG.JPG');
-  background-repeat: repeat;
-  width: 100%;
+  max-width: 2000px;
 }
-.dropdown {
-  visibility: visible;
-  right: 40px;
-}
+
 .flex-item {
   padding: 5px;
-  width: 85%;
+  width: 95%;
   height: auto;
   max-height: 90%;
   margin: 25px;
@@ -45,9 +66,7 @@
 a.nav-link {
   display: none;
 }
-.Navbar {
-  background-color: red;
-}
+
 
 .carousel {
   padding: 5px;
@@ -75,7 +94,10 @@ a.nav-link {
   font-size: 3em;
   text-align: center;
 }
-@media all and (min-width: 900px) {
+.dropdown {
+  visibility: visible;
+}
+@media all and (min-width: 768px) {
 .main-nav {
   list-style-type: none;
   display: none;
@@ -86,15 +108,16 @@ a.nav-link {
 .mr-auto {
   visibility: visible;
 }
-.dropdown {
+
+  .dropdown {
   visibility: collapse;
 }
 .flex-item {
   padding: 5px;
-  width: 85%;
-  max-width: 500px;
+  width: 95%;
+  max-width: 700px;
   height: auto;
-  max-height: 500px;
+  max-height: 100%;
   margin: 25px;
   margin-top: 20px;
   line-height: 150px;
